learn about env, searchParams, route handlers, api params

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx",
-    "app/posts/page.jsx"
+    "src/app/posts/page.jsx"
   ],
   "exclude": ["node_modules"]
 }
